--- a/Views/Course/List.cshtml
+++ b/Views/Course/List.cshtml
@@ -1,7 +1,48 @@
-@{
-    ViewData["Title"] = "Course Page";
-}
+@model List<Course>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/lib/boostrap/dist/css/bootstrap.min.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+            <div class="container">
+                <a class="navbar-brand" href="#">CourseApp</a>
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                     <li class="nav-item">
+                        <a href="#" class="nav-link">Kurslar</a>
+                    </li>
 
-<div class="text-center">
-    <h1 class="display-4">Course / List</h1>
-</div>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="container pb-3">
+        <main>
+        @foreach(var kurs in Model)
+        {
+            <div class="card mb-3">
+               <div class="row">
+                    <div class="col-md-4">
+                        <img src="~/img/@kurs.Image" class="img-fluid rounded-start" width="200" alt="">
+                        
+                    </div>
+                    <div class="col-md-8">
+                        <h5 class="card-title">@kurs.Title</h5>
+                        <p class="card-text">@kurs.Description</p>
+                    </div>
+               </div>
+                
+            </div>
+        }
+        </main>
+    </div>   
+</body>
+</html>
